# eventfinder

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
client/: .gitignore  .metadata  FIREBASE_SETUP.md  README.md  analysis_options.yaml  firebase.json  pubspec.yaml
client/assets/: us_cities.json
client/ios/: Podfile
client/lib/: main.dart
client/test/: city_catalog_test.dart  day_window_test.dart  event_format_test.dart  history_screen_test.dart  location_service_test.dart  phone_format_test.dart  results_screen_test.dart  session_detail_screen_test.dart  session_history_test.dart  session_models_test.dart  swipe_card_stack_test.dart  swipe_session_test.dart  widget_test.dart
docs/: DEPLOYMENT_PLAN.md  unified_card_schema.md
migrations/: env.py
migrations/versions/: 0001_create_users_table.py  0001a_create_events_table.py  0002_add_card_fields.py  0003_create_sessions_and_swipes.py  0004_add_user_profile_fields.py  0005_add_user_name.py  0006_liked_ideas.py
scripts/: dev-emulator.sh
src/application/: exceptions.py
src/domain/: exceptions.py
tests/: conftest.py
tests/application/: test_event_mapper.py  test_get_event_feed.py  test_get_session_detail.py  test_get_user_profile.py  test_list_sessions.py  test_record_swipe.py  test_resolve_location.py  test_save_session.py  test_search_locations.py  test_sync_user.py  test_update_user_profile.py
tests/domain/: test_availability_window.py  test_card_filter.py  test_card_merger.py  test_event.py  test_geo_location.py  (+1 more)
(+131 files in other folders)
